--- a/Weather.today!/Base.lproj/MainMenu.xib
+++ b/Weather.today!/Base.lproj/MainMenu.xib
@@ -11,21 +11,23 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Weather_today_" customModuleProvider="target">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Weather_today_" customModuleProvider="target"/>
+        <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
+        <customObject id="3yf-mz-5Ff" customClass="statusMenuController" customModule="Weather_today_" customModuleProvider="target">
             <connections>
-                <outlet property="statusMenu" destination="jVn-N1-qKn" id="zbc-lW-2pj"/>
+                <outlet property="statusMenu" destination="jVn-N1-qKn" id="I8A-xN-7jn"/>
             </connections>
         </customObject>
-        <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu id="jVn-N1-qKn">
             <items>
                 <menuItem title="Quit" id="8Sd-ZE-b3z" userLabel="Quit">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="quitButtonClicked:" target="Voe-Tx-rLC" id="wiP-Zt-etH"/>
+                        <action selector="quitButtonClicked:" target="3yf-mz-5Ff" id="lBp-i2-zYt"/>
                     </connections>
                 </menuItem>
             </items>
+            <point key="canvasLocation" x="138.5" y="165.5"/>
         </menu>
     </objects>
 </document>
